2002-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/atan.S: completely rewritten, much better accuracy.
	* libm/fplib/atan2.S: completely rewritten;
		both contributed by Reiner Patommel.

2002-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/fplib.inc: add FPPUSH, FPPOP, FPCLR, and FPSWAP
		macros; contributed by Reiner Patommel.

2002-12-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/twitest/twitest.c: TWI example, new file.
	* doc/examples/twitest/twitest.dox: TWI example, docs.
	* doc/examples/twitest/Makefile: TWI example, sample makefile.
	* doc/api/doxygen.config.in: include twitest.
	* doc/examples/Makefile.am: include twitest.

2002-12-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom163.h: add bit definitions for TWSR.
	* include/avr/iom323.h: ditto.

2002-12-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/twi.h: add some more useful macros.

2002-12-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add Eric's entry about relocating code to a
		fixed address.

2002-12-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/using-tools.dox: add an anchor used in the FAQ.

2002-12-17  Theodore A. Roth  <troth@openavr.org>

	* include/inttypes.h: Added more dox, since doxygen isn't generating
	them by default anymore.

2002-12-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/wdt.h: fix typo.

2002-12-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom169.h: Revert premature patch (from Joerg's work in
	progress).

2002-12-16  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/faq.dox: Fix broken link where doxygen tried to xref to 
	"main()" when it should not.

2002-12-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add entry about effect of -Ox.

2002-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
